# 2021_LENGUAJES_TAREA3_DonCEy_Kong_Jr

./: .gitignore  Ejemplo json.txt  Estructura json.txt  Instalacion de libreria alegro en C.txt  Lianas.txt  README.md
Client/: CMakeLists.txt  main.c
Client/sockets/: Socket.c  Socket.h
Cliente/: CMakeLists.txt  client.c  data.json  main.c
Cliente/Ejecutable/: CMakeCache.txt  Cliente.cbp  Makefile  cmake_install.cmake
Cliente/controllers/: gameController.c  gameController.h  jsonController.c  jsonController.h  lobbyController.c  lobbyController.h
Cliente/models/: fruit.c  fruit.h  key.c  key.h  kremlin.c  kremlin.h  monkey.c  monkey.h
Cliente/sockets/: client.c  dkClient.c  dkClient.h  socket.c  socket.h
Cliente/src/sockets/: Sockets.c  Sockets.h  cJson.c  cJson.h
Cliente/ui/: GameWindow.c  GameWindow.h  LobbyWindow.c  LobbyWindow.h
Documentacion/: Documentacion DonCEy Kong Jr.docx  Manual de usuario.docx  Presentacion defensa.pptx  ~$cumentacion DonCEy Kong Jr.docx
Ejecutables/Cliente/: Ejecutable.bat
Ejecutables/Servidor/: Ejecutable.bat
Instalacion/: Amazon Coretto link.txt
LogicaJava/src/controller/: CocodriloController.java  GameManager.java  MonoController.java
LogicaJava/src/view/: CampoBoton.java  Ventana.java
Logica_Java/src/Controller/: CocodriloController.java  CreadorDeMapa.java  FrutaController.java  GameManager.java  MonoController.java
Logica_Java/src/Logica/: GameManager.java
Logica_Java/src/View/: Boton.java  CampoBoton.java  MultiKeyPressListener.java  PruebaTeclas.java  Ventana.java
Logica_Java/src/controller/: CocodriloController.java  CreadorDeMapa.java  FrutaController.java  GameManager.java  MonoController.java
Logica_Java/src/tests/: Main.java
Logica_Java/src/view/: CampoBoton.java  Ventana.java
Media/: cuadricula.xlsx
Multithread Server/src/: Main.java  conexion.json
Multithread Server/src/settings/: Settings.java
Multithread Server/src/sockets/: Client.java  Guest.java  Manager.java  Member.java  Room.java  Serializer.java  Server.java  SocketData.java
Multithread Server/src/structure/: Tuple.java
Multithread Server/src/structures/: Tuple.java
Servidor/files/: lianas.json
Servidor/src/: Main.java  main.java
Servidor/src/model/: Entity.java  EnumFruit.java  Fruit.java  Game.java  Liana.java  Snapjaw.java  SnapjawBlue.java  SnapjawRed.java
Servidor/src/socket/: Serializer.java  Sockets.java
Servidor/src/sockets/: Serializer.java
ServidorNuevo/files/: data.json  lianas.json
ServidorNuevo/src/: MyClient.java
Socket C/Cliente/: CMakeLists.txt
Socket C/Servidor/: CMakeLists.txt  server.c
(+30 files in other folders)
